--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
